--- a/src/css/utilities/gap.css
+++ b/src/css/utilities/gap.css
@@ -12,15 +12,15 @@
     gap: var(--space-xs);
   }
 
-  .gap-s {
+  .gap-sm {
     gap: var(--space-sm);
   }
 
-  .gap-m {
+  .gap-md {
     gap: var(--space-md);
   }
 
-  .gap-l {
+  .gap-lg {
     gap: var(--space-lg);
   }
 
@@ -53,15 +53,15 @@
     column-gap: var(--space-xs);
   }
 
-  .gapx-s {
+  .gapx-sm {
     column-gap: var(--space-sm);
   }
 
-  .gapx-m {
+  .gapx-md {
     column-gap: var(--space-md);
   }
 
-  .gapx-l {
+  .gapx-lg {
     column-gap: var(--space-lg);
   }
 
@@ -94,15 +94,15 @@
     row-gap: var(--space-xs);
   }
 
-  .gapy-s {
+  .gapy-sm {
     row-gap: var(--space-sm);
   }
 
-  .gapy-m {
+  .gapy-md {
     row-gap: var(--space-md);
   }
 
-  .gapy-l {
+  .gapy-lg {
     row-gap: var(--space-lg);
   }
 
