--- a/src/css/utilities/padding.css
+++ b/src/css/utilities/padding.css
@@ -12,16 +12,16 @@
     padding: var(--space-xs);
   }
 
-  .p-s {
-    padding: var(--space-s);
+  .p-sm {
+    padding: var(--space-sm);
   }
 
-  .p-m {
-    padding: var(--space-m);
+  .p-md {
+    padding: var(--space-md);
   }
 
-  .p-l {
-    padding: var(--space-l);
+  .p-lg {
+    padding: var(--space-lg);
   }
 
   .p-xl {
@@ -53,16 +53,16 @@
     padding-inline: var(--space-xs);
   }
 
-  .px-s {
-    padding-inline: var(--space-s);
+  .px-sm {
+    padding-inline: var(--space-sm);
   }
 
-  .px-m {
-    padding-inline: var(--space-m);
+  .px-md {
+    padding-inline: var(--space-md);
   }
 
-  .px-l {
-    padding-inline: var(--space-l);
+  .px-lg {
+    padding-inline: var(--space-lg);
   }
 
   .px-xl {
@@ -94,16 +94,16 @@
     padding-inline-start: var(--space-xs);
   }
 
-  .pl-s {
-    padding-inline-start: var(--space-s);
+  .pl-sm {
+    padding-inline-start: var(--space-sm);
   }
 
-  .pl-m {
-    padding-inline-start: var(--space-m);
+  .pl-md {
+    padding-inline-start: var(--space-md);
   }
 
-  .pl-l {
-    padding-inline-start: var(--space-l);
+  .pl-lg {
+    padding-inline-start: var(--space-lg);
   }
 
   .pl-xl {
@@ -135,16 +135,16 @@
     padding-inline-end: var(--space-xs);
   }
 
-  .pr-s {
-    padding-inline-end: var(--space-s);
+  .pr-sm {
+    padding-inline-end: var(--space-sm);
   }
 
-  .pr-m {
-    padding-inline-end: var(--space-m);
+  .pr-md {
+    padding-inline-end: var(--space-md);
   }
 
-  .pr-l {
-    padding-inline-end: var(--space-l);
+  .pr-lg {
+    padding-inline-end: var(--space-lg);
   }
 
   .pr-xl {
@@ -176,16 +176,16 @@
     padding-block: var(--space-xs);
   }
 
-  .py-s {
-    padding-block: var(--space-s);
+  .py-sm {
+    padding-block: var(--space-sm);
   }
 
-  .py-m {
-    padding-block: var(--space-m);
+  .py-md {
+    padding-block: var(--space-md);
   }
 
-  .py-l {
-    padding-block: var(--space-l);
+  .py-lg {
+    padding-block: var(--space-lg);
   }
 
   .py-xl {
@@ -217,16 +217,16 @@
     padding-block-start: var(--space-xs);
   }
 
-  .pt-s {
-    padding-block-start: var(--space-s);
+  .pt-sm {
+    padding-block-start: var(--space-sm);
   }
 
-  .pt-m {
-    padding-block-start: var(--space-m);
+  .pt-md {
+    padding-block-start: var(--space-md);
   }
 
-  .pt-l {
-    padding-block-start: var(--space-l);
+  .pt-lg {
+    padding-block-start: var(--space-lg);
   }
 
   .pt-xl {
@@ -258,16 +258,16 @@
     padding-block-end: var(--space-xs);
   }
 
-  .pb-s {
-    padding-block-end: var(--space-s);
+  .pb-sm {
+    padding-block-end: var(--space-sm);
   }
 
-  .pb-m {
-    padding-block-end: var(--space-m);
+  .pb-md {
+    padding-block-end: var(--space-md);
   }
 
-  .pb-l {
-    padding-block-end: var(--space-l);
+  .pb-lg {
+    padding-block-end: var(--space-lg);
   }
 
   .pb-xl {
